--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   <meta charset="utf-8">
 
   <title>Lista de tareas</title>
-  <meta name="description" content="The HTML5 Herald">
-  <meta name="author" content="SitePoint">
+  <meta name="description" content="Lista de tareas">
+  <meta name="author" content="Adalab">
 
   <link rel="stylesheet" href="dist/css/app.min.css">
 </head>
