Upload full code

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <meta name="description" content="Lista de tareas">
   <meta name="author" content="Adalab">
 
+  <!-- Hoja de estilos -->
   <link rel="stylesheet" href="dist/css/app.min.css">
 </head>
 
@@ -27,9 +28,15 @@
       <li>Leer un libro sobre JS</li>
       <li>Ordenar la oficina</li>
       <li>Pasear al perro</li>
-    </ul> 
+    </ul>
+
+    <p class="footer">
+      Código extraído y refactorizado a partir del ejemplo de <a href="https://www.w3schools.com/howto/howto_js_todolist.asp">w3cschools.com</a>.
+    </p>
+
   </div>
 
+  <!-- Script -->
   <script src="dist/js/app.min.js"></script>
 </body>
 </html>
